--- a/proposal/content.tex
+++ b/proposal/content.tex
@@ -1,4 +1,5 @@
 \input{./chapters/abstract}
+\input{./chapters/introduction.tex}
 \input{./chapters/motivation.tex}
 \input{./chapters/research-questions.tex}
 \input{./chapters/contributions.tex}
