Add more proposal text

--- a/proposal/preamble.tex
+++ b/proposal/preamble.tex
@@ -3,5 +3,6 @@
 \usepackage[english]{babel}
 \usepackage{graphicx}
 \usepackage[backend=biber]{biblatex}
+\usepackage[printonlyused,withpage]{acronym}
 
 \bibliography{references}
