More proposal text

--- a/proposal/references.bib
+++ b/proposal/references.bib
@@ -1,15 +1,30 @@
 @article{Johnson2010,
-   abstract = {Effective benchmarking requires standards for measuring performance across a broad range of organizations. Industry-benchmarking measures the relative performance levels of similar operations, but gathering sufficient data to robustly characterize best performance is the primary hurdle to more widespread implementation. This paper describes the development of an innovative, large-scale benchmarking methodology which employs Internet technology to overcome the data collection problem. We discuss a particular instance of this approach, iDEAs-W-the result of an ongoing collaboration between academia and the warehousing industry. This paper's purpose is to demonstrate the methodology for the warehousing industry and share our insights to allow others to refine the tool for applications in other industries. © 2009 Elsevier B.V. All rights reserved.},
+   abstract = {Effective benchmarking requires standards for measuring
+               performance across a broad range of organizations.
+               Industry-benchmarking measures the relative performance levels of
+               similar operations, but gathering sufficient data to robustly
+               characterize best performance is the primary hurdle to more
+               widespread implementation. This paper describes the development of
+               an innovative, large-scale benchmarking methodology which employs
+               Internet technology to overcome the data collection problem. We
+               discuss a particular instance of this approach, iDEAs-W-the result
+               of an ongoing collaboration between academia and the warehousing
+               industry. This paper's purpose is to demonstrate the methodology
+               for the warehousing industry and share our insights to allow
+               others to refine the tool for applications in other industries. ©
+               2009 Elsevier B.V. All rights reserved.},
    author = {Andy Johnson and Wen Chih Chen and Leon F. McGinnis},
    doi = {10.1016/J.COMPIND.2009.10.006},
    issn = {0166-3615},
    issue = {3},
    journal = {Computers in Industry},
-   keywords = {Benchmarking,Data envelopment analysis,Internet tools,Performance measurement,Warehousing},
+   keywords = {Benchmarking,Data envelopment analysis,Internet tools,Performance
+               measurement,Warehousing},
    month = {4},
    pages = {280-286},
    publisher = {Elsevier},
-   title = {Large-scale Internet benchmarking: Technology and application in warehousing operations},
+   title = {Large-scale Internet benchmarking: Technology and application in
+            warehousing operations},
    volume = {61},
    year = {2010},
 }
@@ -17,34 +32,97 @@
    author = {Sascha Segan},
    journal = {PC Mag},
    month = {10},
-   title = {Tested: SpaceX's Starlink Satellite Internet Service Is Fast, But It'll Cost You},
+   title = {Tested: SpaceX's Starlink Satellite Internet Service Is Fast, But
+            It'll Cost You},
    year = {2020},
 }
 @article{Aleksic2010,
-   abstract = {Wired broadband access can be realized using various technologies, configurations and protocols. It is widely deployed and able to provide both high data rates and high reliability. These features are of strong importance for many advanced applications. Since the number of broadband subscribers worldwide grows exponentially, the power efficiency of access networks becomes an important issue. The main goal of this paper is to study the power consumption of different wired broadband access technologies including both those already widely used and those which are state-of-the art, but not yet widely deployed. Thus, results on power efficiency of different access networks such as hybrid fiber coax (HFC), digital subscriber line (DSL), 1 Gbit/s and 10 Gbit/s point-to-point Ethernet and passive optical networks (1G-PON and 10G-PON) are shown. © 2010 IEEE.},
+   abstract = {Wired broadband access can be realized using various technologies
+               , configurations and protocols. It is widely deployed and able to
+               provide both high data rates and high reliability. These features
+               are of strong importance for many advanced applications. Since the
+               number of broadband subscribers worldwide grows exponentially, the
+               power efficiency of access networks becomes an important issue.
+               The main goal of this paper is to study the power consumption of
+               different wired broadband access technologies including both those
+               already widely used and those which are state-of-the art, but not
+               yet widely deployed. Thus, results on power efficiency of
+               different access networks such as hybrid fiber coax (HFC), digital
+               subscriber line (DSL), 1 Gbit/s and 10 Gbit/s point-to-point
+               Ethernet and passive optical networks (1G-PON and 10G-PON) are
+               shown. © 2010 IEEE.},
    author = {Slaviša Aleksic and Ana Lovric},
    doi = {10.1109/CSNDSP16145.2010.5580441},
    isbn = {9781861353696},
-   journal = {2010 7th International Symposium on Communication Systems, Networks and Digital Signal Processing, CSNDSP 2010},
+   journal = {2010 7th International Symposium on Communication Systems,
+              Networks and Digital Signal Processing, CSNDSP 2010},
    pages = {147-151},
    publisher = {IEEE Computer Society},
    title = {Power consumption of wired access network technologies},
    year = {2010},
 }
 @article{Kassas2023,
-   abstract = {This paper summarizes current state-of-the-art navigation results with multi-constellation low Earth orbit (LEO) satellite signals of opportunity. Experimental results with four LEO satellite constellations are presented: Starlink, OneWeb, Orbcomm, and Iridium. Two receiver designs are presented: (R1) a cognitive opportunistic navigation approach, which utilizes minimal, publicly available prior knowledge about the LEO satellite signal structure and (R2) a blind approach, which assumes no prior knowledge of the signals. Stationary positioning and mobile ground vehicle navigation results are presented. For the ground vehicle, results with two frameworks are presented: (N1) a LEO-aided inertial navigation system (INS) simultaneous tracking and navigation (STAN) and (N2) a LEO-aided differential STAN. The results reveal the tremendous promise of exploiting multi-constellation LEO satellite signals of opportunity for navigation. For positioning: (i) with R1, starting with an initial estimate about 179 km away, by exploiting signals from 6 Starlink, 1 Orbcomm, and 4 Iridium, a final two-dimensional (2-D) position error of 6.5 m was achieved and (ii) with R2, starting with an initial estimate about 3,600 km away, by exploiting signals from 4 Starlink, 2 OneWeb, 1 Orbcomm, and 1 Iridium, a final 2-D position error of 5.1 m was achieved. For navigation, a ground vehicle was equipped with an industrial-grade inertial measurement unit (IMU) and an altimeter. (i) With R1 and N1, the vehicle traversed 4.15 km in 150 seconds (GNSS signals were only available for the first 2.33 km). By exploiting signals from 3 Starlink, 2 Orbcomm, and 1 Iridium, the 3-D position root mean squared error (RMSE) and final 3-D error were 18.4 m and 27.1 m, respectively. The GNSS-aided INS position RMSE and final 3-D error were 118.5 m and 472.7 m, respectively. (ii) With R2 and N2, the vehicle traversed 1.03 km in 110 seconds (GNSS signals were only available for the first 0.11 km). By exploiting signals from 4 Starlink, 1 OneWeb, 2 Orbcomm, and 1 Iridium, the 3-D position RMSE and final 3-D error were 9.5 m and 4.4 m, respectively. The GNSS-aided INS position RMSE and final 3-D error were 205 m and 525 m, respectively.},
-   author = {Zaher M. Kassas and Sharbel Kozhaya and Haitham Kanj and Joe Saroufim and Samer W. Hayek and Mohammad Neinavaie and Nadim Khairallah and Joe Khalife},
+   abstract = {This paper summarizes current state-of-the-art navigation results
+               with multi-constellation low Earth orbit (LEO) satellite signals
+               of opportunity. Experimental results with four LEO satellite
+               constellations are presented: Starlink, OneWeb, Orbcomm, and
+               Iridium. Two receiver designs are presented: (R1) a cognitive
+               opportunistic navigation approach, which utilizes minimal,
+               publicly available prior knowledge about the LEO satellite signal
+               structure and (R2) a blind approach, which assumes no prior
+               knowledge of the signals. Stationary positioning and mobile ground
+               vehicle navigation results are presented. For the ground vehicle,
+               results with two frameworks are presented: (N1) a LEO-aided
+               inertial navigation system (INS) simultaneous tracking and
+               navigation (STAN) and (N2) a LEO-aided differential STAN. The
+               results reveal the tremendous promise of exploiting
+               multi-constellation LEO satellite signals of opportunity for
+               navigation. For positioning: (i) with R1, starting with an initial
+               estimate about 179 km away, by exploiting signals from 6 Starlink,
+               1 Orbcomm, and 4 Iridium, a final two-dimensional (2-D) position
+               error of 6.5 m was achieved and (ii) with R2, starting with an
+               initial estimate about 3,600 km away, by exploiting signals from 4
+               Starlink, 2 OneWeb, 1 Orbcomm, and 1 Iridium, a final 2-D position
+               error of 5.1 m was achieved. For navigation, a ground vehicle was
+               equipped with an industrial-grade inertial measurement unit (IMU)
+               and an altimeter. (i) With R1 and N1, the vehicle traversed 4.15
+               km in 150 seconds (GNSS signals were only available for the first
+               2.33 km). By exploiting signals from 3 Starlink, 2 Orbcomm, and 1
+               Iridium, the 3-D position root mean squared error (RMSE) and final
+               3-D error were 18.4 m and 27.1 m, respectively. The GNSS-aided INS
+               position RMSE and final 3-D error were 118.5 m and 472.7 m,
+               respectively. (ii) With R2 and N2, the vehicle traversed 1.03 km
+               in 110 seconds (GNSS signals were only available for the first
+               0.11 km). By exploiting signals from 4 Starlink, 1 OneWeb, 2
+               Orbcomm, and 1 Iridium, the 3-D position RMSE and final 3-D error
+               were 9.5 m and 4.4 m, respectively. The GNSS-aided INS position
+               RMSE and final 3-D error were 205 m and 525 m, respectively.},
+   author = {Zaher M. Kassas and Sharbel Kozhaya and Haitham Kanj and Joe
+             Saroufim and Samer W. Hayek and Mohammad Neinavaie and Nadim
+             Khairallah and Joe Khalife},
    doi = {10.1109/PLANS53410.2023.10140066},
    isbn = {9781665417723},
-   journal = {2023 IEEE/ION Position, Location and Navigation Symposium, PLANS 2023},
-   keywords = {Doppler tracking,OneWeb,Positioning,Starlink,low Earth orbit satellite,navigation,signals of opportunity},
+   journal = {2023 IEEE/ION Position, Location and Navigation Symposium, PLANS
+              2023},
+   keywords = {Doppler tracking,OneWeb,Positioning,Starlink,low Earth orbit
+               satellite,navigation,signals of opportunity},
    pages = {338-343},
    publisher = {Institute of Electrical and Electronics Engineers Inc.},
-   title = {Navigation with Multi-Constellation LEO Satellite Signals of Opportunity: Starlink, OneWeb, Orbcomm, and Iridium},
+   title = {Navigation with Multi-Constellation LEO Satellite Signals of
+            Opportunity: Starlink, OneWeb, Orbcomm, and Iridium},
    year = {2023},
 }
 @article{Henry2002,
-   abstract = {WiFi, also known as 802.11b, has become the preferred technology for wireless local area networking in both business and home environments. Even though it was designed primarily for private applications, WiFi is also being deployed in public places to create so-called hotspots, where WiFi-capable users can obtain broadband Internet access. This new domain of application could be the major future market opportunity for WiFi, but in order to take advantage of it, several key challenges, both technical and business-related, must be overcome. In this article we outline these challenges and discuss approaches to solutions.},
+   abstract = {WiFi, also known as 802.11b, has become the preferred technology
+               for wireless local area networking in both business and home
+               environments. Even though it was designed primarily for private
+               applications, WiFi is also being deployed in public places to
+               create so-called hotspots, where WiFi-capable users can obtain
+               broadband Internet access. This new domain of application could be
+               the major future market opportunity for WiFi, but in order to take
+               advantage of it, several key challenges, both technical and
+               business-related, must be overcome. In this article we outline
+               these challenges and discuss approaches to solutions.},
    author = {Paul S. Henry and Hui Luo},
    doi = {10.1109/MCOM.2002.1106162},
    issn = {01636804},
@@ -72,4 +150,28 @@
    month = {10},
    title = {The birth and demise of an idea: Teledesic's 'Internet in the sky'},
    year = {2002},
+}
+@misc{N2YO2024,
+   author = {N2YO},
+   note = {[Online; accessed 18-April-2024]},
+   title = {Live Real Time Satellite Tracking and Predictions},
+   url = {https://www.n2yo.com/},
+   year = {2024},
+}
+@inproceedings{DBLP:conf/imc/MichelTGB22,
+   author = {Fran{\c{c}}ois Michel and Martino Trevisan and Danilo Giordano and
+             Olivier Bonaventure},
+   editor = {Chadi Barakat and Cristel Pelsser and Theophilus A. Benson and
+             David R. Choffnes},
+   title = {A first look at starlink performance},
+   booktitle = {Proceedings of the 22nd {ACM} Internet Measurement Conference, {
+                IMC} 2022, Nice, France, October 25-27, 2022},
+   pages = {130--136},
+   publisher = {{ACM}},
+   year = {2022},
+   url = {https://doi.org/10.1145/3517745.3561416},
+   doi = {10.1145/3517745.3561416},
+   timestamp = {Mon, 06 Feb 2023 21:45:20 +0100},
+   biburl = {https://dblp.org/rec/conf/imc/MichelTGB22.bib},
+   bibsource = {dblp computer science bibliography, https://dblp.org},
 }
