Added new paper to references

--- a/proposal/references.bib
+++ b/proposal/references.bib
@@ -175,3 +175,19 @@
    biburl = {https://dblp.org/rec/conf/imc/MichelTGB22.bib},
    bibsource = {dblp computer science bibliography, https://dblp.org},
 }
+@inproceedings{DBLP:conf/infocom/MaCZCML23,
+   author = {Sami Ma and Yi Ching Chou and Haoyuan Zhao and Long Chen and
+             Xiaoqiang Ma and Jiangchuan Liu},
+   title = {Network Characteristics of {LEO} Satellite Constellations: {A}
+            Starlink-Based Measurement from End Users},
+   booktitle = {{IEEE} {INFOCOM} 2023 - {IEEE} Conference on Computer
+                Communications, New York City, NY, USA, May 17-20, 2023},
+   pages = {1--10},
+   publisher = {{IEEE}},
+   year = {2023},
+   url = {https://doi.org/10.1109/INFOCOM53939.2023.10228912},
+   doi = {10.1109/INFOCOM53939.2023.10228912},
+   timestamp = {Mon, 18 Sep 2023 16:35:01 +0200},
+   biburl = {https://dblp.org/rec/conf/infocom/MaCZCML23.bib},
+   bibsource = {dblp computer science bibliography, https://dblp.org},
+}
