Added reference to paper 'Starlink on the Road'

--- a/proposal/references.bib
+++ b/proposal/references.bib
@@ -191,3 +191,19 @@
    biburl = {https://dblp.org/rec/conf/infocom/MaCZCML23.bib},
    bibsource = {dblp computer science bibliography, https://dblp.org},
 }
+@article{DBLP:journals/corr/abs-2403-13497,
+   author = {Dominic Laniewski and Eric Lanfer and Simon Beginn and Jan Dunker
+             and Michael D{\"{u}}ckers and Nils Aschenbruck},
+   title = {Starlink on the Road: {A} First Look at Mobile Starlink Performance
+            in Central Europe},
+   journal = {CoRR},
+   volume = {abs/2403.13497},
+   year = {2024},
+   url = {https://doi.org/10.48550/arXiv.2403.13497},
+   doi = {10.48550/ARXIV.2403.13497},
+   eprinttype = {arXiv},
+   eprint = {2403.13497},
+   timestamp = {Mon, 08 Apr 2024 18:24:51 +0200},
+   biburl = {https://dblp.org/rec/journals/corr/abs-2403-13497.bib},
+   bibsource = {dblp computer science bibliography, https://dblp.org},
+}
