State of Writing

--- a/proposal/preamble.tex
+++ b/proposal/preamble.tex
@@ -4,5 +4,6 @@
 \usepackage{graphicx}
 \usepackage[backend=biber]{biblatex}
 \usepackage[printonlyused,withpage]{acronym}
+\usepackage{todonotes}
 
 \bibliography{references}
