--- a/proposal/preamble.tex
+++ b/proposal/preamble.tex
@@ -5,5 +5,7 @@
 \usepackage[backend=biber]{biblatex}
 \usepackage[printonlyused,withpage]{acronym}
 \usepackage{todonotes}
+\usepackage[]{mdframed}
+\usepackage[linktoc=all]{hyperref}% See hyperref manual section 5.13
 
 \bibliography{references}
