--- a/proposal/references.bib
+++ b/proposal/references.bib
@@ -153,7 +153,7 @@
 }
 @misc{N2YO2024,
    author = {N2YO},
-   note = {[Online; accessed 18-April-2024]},
+   note = {[Online; accessed April 18, 2024]},
    title = {Live Real Time Satellite Tracking and Predictions},
    url = {https://www.n2yo.com/},
    year = {2024},
@@ -207,3 +207,53 @@
    biburl = {https://dblp.org/rec/journals/corr/abs-2403-13497.bib},
    bibsource = {dblp computer science bibliography, https://dblp.org},
 }
+@misc{QuarkslabsBlogUserTerminalFirmsware,
+   author = {Carlo Ramponi},
+   note = {[Online; accessed April 18, 2024]},
+   title = {Diving into Starlink's User Terminal Firmware},
+   url = {https://blog.quarkslab.com/starlink.html},
+   year = {2023},
+   month = {8},
+}
+@misc{WoutersDumpingUserTerminalFirmware,
+   author = {Lennert Wouters},
+   note = {[Online; accessed April 18, 2024]},
+   title = {Dumping and extracting the SpaceX Starlink User Terminal firmware},
+   url = {
+          https://www.esat.kuleuven.be/cosic/blog/dumping-and-extracting-the-spacex-starlink-user-terminal-firmware/
+          },
+   year = {2021},
+   month = {7},
+}
+@article{Hauri2020,
+   abstract = {Buoyed by advances in space technology, several firms are
+               planning satellite constellations to offer broadband Internet
+               service. While these developments are happening quickly, there are
+               also many uncertainties about the design of these networks. A key
+               open question is whether or not they will incorporate direct
+               connectivity between satellites, instead of only ground-satellite
+               connections. We compare the network behavior resulting from the
+               two outcomes of that question. Our analysis shows that
+               inter-satellite links substantially reduce the temporal variations
+               in latency, add greater resilience to weather, and could yield
+               more than 3x the throughput achieved without such links. Thus,
+               whether this one design element pans out could have a large
+               bearing on the performance, reliability, and economics of these
+               networks.},
+   author = {Yannick Hauri and Debopam Bhattacherjee and Manuel Grossmann and
+             Ankit Singla},
+   doi = {10.1145/3422604.3425938},
+   isbn = {9781450381451},
+   journal = {HotNets 2020 - Proceedings of the 19th ACM Workshop on Hot Topics
+              in Networks},
+   keywords = {bent-pipe connectivity,ground-satellite connectivity,
+               inter-satellite link,internet broadband constellation,leo,low
+               earth orbit satellite},
+   month = {11},
+   pages = {205-211},
+   publisher = {Association for Computing Machinery, Inc},
+   title = {"Internet from Space" without Inter-satellite Links},
+   url = {https://dl.acm.org/doi/10.1145/3422604.3425938},
+   year = {2020},
+}
+
