--- a/proposal/acronyms.tex
+++ b/proposal/acronyms.tex
@@ -3,5 +3,6 @@
 \begin{acronym}
 	\acro{FTTH}{Fiber-to-the-home}
 	\acro{LEO}{Low-Earth~Orbit}
+	\acro{GEO}{Geostationary~Orbit}
 	\acro{RTT}{Round-Trip-Time}
 \end{acronym}
