--- a/proposal/preamble.tex
+++ b/proposal/preamble.tex
@@ -6,6 +6,6 @@
 \usepackage[printonlyused,withpage]{acronym}
 \usepackage{todonotes}
 \usepackage[]{mdframed}
-\usepackage[linktoc=all]{hyperref}% See hyperref manual section 5.13
+\usepackage[linktoc=all, hidelinks]{hyperref}% See hyperref manual section 5.13
 
 \bibliography{references}
