--- a/proposal/acronyms.tex
+++ b/proposal/acronyms.tex
@@ -1,6 +1,8 @@
 \section{List of Acronyms}
 
 \begin{acronym}
+	\acro{ISLs}{Inter-Satellite Links}
+	\acro{ISL}{Inter-Satellite Link}
 	\acro{FTTH}{Fiber-to-the-home}
 	\acro{LEO}{Low-Earth~Orbit}
 	\acro{GEO}{Geostationary~Orbit}
