[Proposal] Proposal First Draft (#17)
The text of the proposal

--- a/proposal/content.tex
+++ b/proposal/content.tex
@@ -1,5 +1,7 @@
 \input{./chapters/abstract}
+\input{./chapters/introduction.tex}
 \input{./chapters/motivation.tex}
+%\input{./chapters/related-work.tex} % Should that be in the proposal?
 \input{./chapters/research-questions.tex}
 \input{./chapters/contributions.tex}
 \input{./chapters/outline.tex}
