--- a/proposal/preamble.tex
+++ b/proposal/preamble.tex
@@ -3,5 +3,9 @@
 \usepackage[english]{babel}
 \usepackage{graphicx}
 \usepackage[backend=biber]{biblatex}
+\usepackage[printonlyused,withpage]{acronym}
+\usepackage{todonotes}
+\usepackage[]{mdframed}
+\usepackage[linktoc=all, hidelinks]{hyperref}% See hyperref manual section 5.13
 
 \bibliography{references}
