--- a/proposal/references.bib
+++ b/proposal/references.bib
@@ -1,12 +1,259 @@
-@article{953350,
-  Address = {New York, NY, USA},
-  Author = {Nassi, I. and Shneiderman, B.},
-  Doi = {10.1145/953349.953350},
-  Issn = {0362-1340},
-  Journal = {SIGPLAN Not.},
-  Number = {8},
-  Pages = {12--26},
-  Publisher = {ACM},
-  Title = {Flowchart techniques for structured programming},
-  Volume = {8},
-  Year = {1973}}
+@article{Johnson2010,
+   abstract = {Effective benchmarking requires standards for measuring
+               performance across a broad range of organizations.
+               Industry-benchmarking measures the relative performance levels of
+               similar operations, but gathering sufficient data to robustly
+               characterize best performance is the primary hurdle to more
+               widespread implementation. This paper describes the development of
+               an innovative, large-scale benchmarking methodology which employs
+               Internet technology to overcome the data collection problem. We
+               discuss a particular instance of this approach, iDEAs-W-the result
+               of an ongoing collaboration between academia and the warehousing
+               industry. This paper's purpose is to demonstrate the methodology
+               for the warehousing industry and share our insights to allow
+               others to refine the tool for applications in other industries. ©
+               2009 Elsevier B.V. All rights reserved.},
+   author = {Andy Johnson and Wen Chih Chen and Leon F. McGinnis},
+   doi = {10.1016/J.COMPIND.2009.10.006},
+   issn = {0166-3615},
+   issue = {3},
+   journal = {Computers in Industry},
+   keywords = {Benchmarking,Data envelopment analysis,Internet tools,Performance
+               measurement,Warehousing},
+   month = {4},
+   pages = {280-286},
+   publisher = {Elsevier},
+   title = {Large-scale Internet benchmarking: Technology and application in
+            warehousing operations},
+   volume = {61},
+   year = {2010},
+}
+@article{Segan2020,
+   author = {Sascha Segan},
+   journal = {PC Mag},
+   month = {10},
+   title = {Tested: SpaceX's Starlink Satellite Internet Service Is Fast, But
+            It'll Cost You},
+   year = {2020},
+}
+@article{Aleksic2010,
+   abstract = {Wired broadband access can be realized using various technologies
+               , configurations and protocols. It is widely deployed and able to
+               provide both high data rates and high reliability. These features
+               are of strong importance for many advanced applications. Since the
+               number of broadband subscribers worldwide grows exponentially, the
+               power efficiency of access networks becomes an important issue.
+               The main goal of this paper is to study the power consumption of
+               different wired broadband access technologies including both those
+               already widely used and those which are state-of-the art, but not
+               yet widely deployed. Thus, results on power efficiency of
+               different access networks such as hybrid fiber coax (HFC), digital
+               subscriber line (DSL), 1 Gbit/s and 10 Gbit/s point-to-point
+               Ethernet and passive optical networks (1G-PON and 10G-PON) are
+               shown. © 2010 IEEE.},
+   author = {Slaviša Aleksic and Ana Lovric},
+   doi = {10.1109/CSNDSP16145.2010.5580441},
+   isbn = {9781861353696},
+   journal = {2010 7th International Symposium on Communication Systems,
+              Networks and Digital Signal Processing, CSNDSP 2010},
+   pages = {147-151},
+   publisher = {IEEE Computer Society},
+   title = {Power consumption of wired access network technologies},
+   year = {2010},
+}
+@article{Kassas2023,
+   abstract = {This paper summarizes current state-of-the-art navigation results
+               with multi-constellation low Earth orbit (LEO) satellite signals
+               of opportunity. Experimental results with four LEO satellite
+               constellations are presented: Starlink, OneWeb, Orbcomm, and
+               Iridium. Two receiver designs are presented: (R1) a cognitive
+               opportunistic navigation approach, which utilizes minimal,
+               publicly available prior knowledge about the LEO satellite signal
+               structure and (R2) a blind approach, which assumes no prior
+               knowledge of the signals. Stationary positioning and mobile ground
+               vehicle navigation results are presented. For the ground vehicle,
+               results with two frameworks are presented: (N1) a LEO-aided
+               inertial navigation system (INS) simultaneous tracking and
+               navigation (STAN) and (N2) a LEO-aided differential STAN. The
+               results reveal the tremendous promise of exploiting
+               multi-constellation LEO satellite signals of opportunity for
+               navigation. For positioning: (i) with R1, starting with an initial
+               estimate about 179 km away, by exploiting signals from 6 Starlink,
+               1 Orbcomm, and 4 Iridium, a final two-dimensional (2-D) position
+               error of 6.5 m was achieved and (ii) with R2, starting with an
+               initial estimate about 3,600 km away, by exploiting signals from 4
+               Starlink, 2 OneWeb, 1 Orbcomm, and 1 Iridium, a final 2-D position
+               error of 5.1 m was achieved. For navigation, a ground vehicle was
+               equipped with an industrial-grade inertial measurement unit (IMU)
+               and an altimeter. (i) With R1 and N1, the vehicle traversed 4.15
+               km in 150 seconds (GNSS signals were only available for the first
+               2.33 km). By exploiting signals from 3 Starlink, 2 Orbcomm, and 1
+               Iridium, the 3-D position root mean squared error (RMSE) and final
+               3-D error were 18.4 m and 27.1 m, respectively. The GNSS-aided INS
+               position RMSE and final 3-D error were 118.5 m and 472.7 m,
+               respectively. (ii) With R2 and N2, the vehicle traversed 1.03 km
+               in 110 seconds (GNSS signals were only available for the first
+               0.11 km). By exploiting signals from 4 Starlink, 1 OneWeb, 2
+               Orbcomm, and 1 Iridium, the 3-D position RMSE and final 3-D error
+               were 9.5 m and 4.4 m, respectively. The GNSS-aided INS position
+               RMSE and final 3-D error were 205 m and 525 m, respectively.},
+   author = {Zaher M. Kassas and Sharbel Kozhaya and Haitham Kanj and Joe
+             Saroufim and Samer W. Hayek and Mohammad Neinavaie and Nadim
+             Khairallah and Joe Khalife},
+   doi = {10.1109/PLANS53410.2023.10140066},
+   isbn = {9781665417723},
+   journal = {2023 IEEE/ION Position, Location and Navigation Symposium, PLANS
+              2023},
+   keywords = {Doppler tracking,OneWeb,Positioning,Starlink,low Earth orbit
+               satellite,navigation,signals of opportunity},
+   pages = {338-343},
+   publisher = {Institute of Electrical and Electronics Engineers Inc.},
+   title = {Navigation with Multi-Constellation LEO Satellite Signals of
+            Opportunity: Starlink, OneWeb, Orbcomm, and Iridium},
+   year = {2023},
+}
+@article{Henry2002,
+   abstract = {WiFi, also known as 802.11b, has become the preferred technology
+               for wireless local area networking in both business and home
+               environments. Even though it was designed primarily for private
+               applications, WiFi is also being deployed in public places to
+               create so-called hotspots, where WiFi-capable users can obtain
+               broadband Internet access. This new domain of application could be
+               the major future market opportunity for WiFi, but in order to take
+               advantage of it, several key challenges, both technical and
+               business-related, must be overcome. In this article we outline
+               these challenges and discuss approaches to solutions.},
+   author = {Paul S. Henry and Hui Luo},
+   doi = {10.1109/MCOM.2002.1106162},
+   issn = {01636804},
+   issue = {12},
+   journal = {IEEE Communications Magazine},
+   month = {12},
+   pages = {66-72},
+   title = {WiFi: What's next?},
+   volume = {40},
+   year = {2002},
+}
+@article{Barboza2000,
+   author = {David Barboza},
+   city = {New York},
+   journal = {The New York Times},
+   month = {4},
+   pages = {1-1},
+   title = {Iridium, Bankrupt, Is Planning a Fiery Ending for Its 88 Satellites},
+   year = {2000},
+}
+@article{Chan2002,
+   author = {Sharon Pian Chan},
+   city = {Seattle},
+   journal = {The Seattle Times},
+   month = {10},
+   title = {The birth and demise of an idea: Teledesic's 'Internet in the sky'},
+   year = {2002},
+}
+@misc{N2YO2024,
+   author = {N2YO},
+   note = {[Online; accessed April 18, 2024]},
+   title = {Live Real Time Satellite Tracking and Predictions},
+   url = {https://www.n2yo.com/},
+   year = {2024},
+}
+@inproceedings{DBLP:conf/imc/MichelTGB22,
+   author = {Fran{\c{c}}ois Michel and Martino Trevisan and Danilo Giordano and
+             Olivier Bonaventure},
+   editor = {Chadi Barakat and Cristel Pelsser and Theophilus A. Benson and
+             David R. Choffnes},
+   title = {A first look at starlink performance},
+   booktitle = {Proceedings of the 22nd {ACM} Internet Measurement Conference, {
+                IMC} 2022, Nice, France, October 25-27, 2022},
+   pages = {130--136},
+   publisher = {{ACM}},
+   year = {2022},
+   url = {https://doi.org/10.1145/3517745.3561416},
+   doi = {10.1145/3517745.3561416},
+   timestamp = {Mon, 06 Feb 2023 21:45:20 +0100},
+   biburl = {https://dblp.org/rec/conf/imc/MichelTGB22.bib},
+   bibsource = {dblp computer science bibliography, https://dblp.org},
+}
+@inproceedings{DBLP:conf/infocom/MaCZCML23,
+   author = {Sami Ma and Yi Ching Chou and Haoyuan Zhao and Long Chen and
+             Xiaoqiang Ma and Jiangchuan Liu},
+   title = {Network Characteristics of {LEO} Satellite Constellations: {A}
+            Starlink-Based Measurement from End Users},
+   booktitle = {{IEEE} {INFOCOM} 2023 - {IEEE} Conference on Computer
+                Communications, New York City, NY, USA, May 17-20, 2023},
+   pages = {1--10},
+   publisher = {{IEEE}},
+   year = {2023},
+   url = {https://doi.org/10.1109/INFOCOM53939.2023.10228912},
+   doi = {10.1109/INFOCOM53939.2023.10228912},
+   timestamp = {Mon, 18 Sep 2023 16:35:01 +0200},
+   biburl = {https://dblp.org/rec/conf/infocom/MaCZCML23.bib},
+   bibsource = {dblp computer science bibliography, https://dblp.org},
+}
+@article{DBLP:journals/corr/abs-2403-13497,
+   author = {Dominic Laniewski and Eric Lanfer and Simon Beginn and Jan Dunker
+             and Michael D{\"{u}}ckers and Nils Aschenbruck},
+   title = {Starlink on the Road: {A} First Look at Mobile Starlink Performance
+            in Central Europe},
+   journal = {CoRR},
+   volume = {abs/2403.13497},
+   year = {2024},
+   url = {https://doi.org/10.48550/arXiv.2403.13497},
+   doi = {10.48550/ARXIV.2403.13497},
+   eprinttype = {arXiv},
+   eprint = {2403.13497},
+   timestamp = {Mon, 08 Apr 2024 18:24:51 +0200},
+   biburl = {https://dblp.org/rec/journals/corr/abs-2403-13497.bib},
+   bibsource = {dblp computer science bibliography, https://dblp.org},
+}
+@misc{QuarkslabsBlogUserTerminalFirmsware,
+   author = {Carlo Ramponi},
+   note = {[Online; accessed April 18, 2024]},
+   title = {Diving into Starlink's User Terminal Firmware},
+   url = {https://blog.quarkslab.com/starlink.html},
+   year = {2023},
+   month = {8},
+}
+@misc{WoutersDumpingUserTerminalFirmware,
+   author = {Lennert Wouters},
+   note = {[Online; accessed April 18, 2024]},
+   title = {Dumping and extracting the SpaceX Starlink User Terminal firmware},
+   url = {
+          https://www.esat.kuleuven.be/cosic/blog/dumping-and-extracting-the-spacex-starlink-user-terminal-firmware/
+          },
+   year = {2021},
+   month = {7},
+}
+@article{Hauri2020,
+   abstract = {Buoyed by advances in space technology, several firms are
+               planning satellite constellations to offer broadband Internet
+               service. While these developments are happening quickly, there are
+               also many uncertainties about the design of these networks. A key
+               open question is whether or not they will incorporate direct
+               connectivity between satellites, instead of only ground-satellite
+               connections. We compare the network behavior resulting from the
+               two outcomes of that question. Our analysis shows that
+               inter-satellite links substantially reduce the temporal variations
+               in latency, add greater resilience to weather, and could yield
+               more than 3x the throughput achieved without such links. Thus,
+               whether this one design element pans out could have a large
+               bearing on the performance, reliability, and economics of these
+               networks.},
+   author = {Yannick Hauri and Debopam Bhattacherjee and Manuel Grossmann and
+             Ankit Singla},
+   doi = {10.1145/3422604.3425938},
+   isbn = {9781450381451},
+   journal = {HotNets 2020 - Proceedings of the 19th ACM Workshop on Hot Topics
+              in Networks},
+   keywords = {bent-pipe connectivity,ground-satellite connectivity,
+               inter-satellite link,internet broadband constellation,leo,low
+               earth orbit satellite},
+   month = {11},
+   pages = {205-211},
+   publisher = {Association for Computing Machinery, Inc},
+   title = {"Internet from Space" without Inter-satellite Links},
+   url = {https://dl.acm.org/doi/10.1145/3422604.3425938},
+   year = {2020},
+}
+
