Added notes about predictors paper

--- a/proposal/references.bib
+++ b/proposal/references.bib
@@ -28,6 +28,7 @@
    volume = {61},
    year = {2010},
 }
+
 @article{Segan2020,
    author = {Sascha Segan},
    journal = {PC Mag},
@@ -36,6 +37,7 @@
             It'll Cost You},
    year = {2020},
 }
+
 @article{Aleksic2010,
    abstract = {Wired broadband access can be realized using various technologies
                , configurations and protocols. It is widely deployed and able to
@@ -61,6 +63,7 @@
    title = {Power consumption of wired access network technologies},
    year = {2010},
 }
+
 @article{Kassas2023,
    abstract = {This paper summarizes current state-of-the-art navigation results
                with multi-constellation low Earth orbit (LEO) satellite signals
@@ -112,6 +115,7 @@
             Opportunity: Starlink, OneWeb, Orbcomm, and Iridium},
    year = {2023},
 }
+
 @article{Henry2002,
    abstract = {WiFi, also known as 802.11b, has become the preferred technology
                for wireless local area networking in both business and home
@@ -134,6 +138,7 @@
    volume = {40},
    year = {2002},
 }
+
 @article{Barboza2000,
    author = {David Barboza},
    city = {New York},
@@ -143,6 +148,7 @@
    title = {Iridium, Bankrupt, Is Planning a Fiery Ending for Its 88 Satellites},
    year = {2000},
 }
+
 @article{Chan2002,
    author = {Sharon Pian Chan},
    city = {Seattle},
@@ -151,6 +157,7 @@
    title = {The birth and demise of an idea: Teledesic's 'Internet in the sky'},
    year = {2002},
 }
+
 @misc{N2YO2024,
    author = {N2YO},
    note = {[Online; accessed April 18, 2024]},
@@ -158,6 +165,7 @@
    url = {https://www.n2yo.com/},
    year = {2024},
 }
+
 @inproceedings{DBLP:conf/imc/MichelTGB22,
    author = {Fran{\c{c}}ois Michel and Martino Trevisan and Danilo Giordano and
              Olivier Bonaventure},
@@ -175,6 +183,7 @@
    biburl = {https://dblp.org/rec/conf/imc/MichelTGB22.bib},
    bibsource = {dblp computer science bibliography, https://dblp.org},
 }
+
 @inproceedings{DBLP:conf/infocom/MaCZCML23,
    author = {Sami Ma and Yi Ching Chou and Haoyuan Zhao and Long Chen and
              Xiaoqiang Ma and Jiangchuan Liu},
@@ -191,6 +200,7 @@
    biburl = {https://dblp.org/rec/conf/infocom/MaCZCML23.bib},
    bibsource = {dblp computer science bibliography, https://dblp.org},
 }
+
 @article{DBLP:journals/corr/abs-2403-13497,
    author = {Dominic Laniewski and Eric Lanfer and Simon Beginn and Jan Dunker
              and Michael D{\"{u}}ckers and Nils Aschenbruck},
@@ -207,6 +217,7 @@
    biburl = {https://dblp.org/rec/journals/corr/abs-2403-13497.bib},
    bibsource = {dblp computer science bibliography, https://dblp.org},
 }
+
 @misc{QuarkslabsBlogUserTerminalFirmsware,
    author = {Carlo Ramponi},
    note = {[Online; accessed April 18, 2024]},
@@ -215,16 +226,16 @@
    year = {2023},
    month = {8},
 }
-@misc{WoutersDumpingUserTerminalFirmware,
-   author = {Lennert Wouters},
-   note = {[Online; accessed April 18, 2024]},
-   title = {Dumping and extracting the SpaceX Starlink User Terminal firmware},
-   url = {
-          https://www.esat.kuleuven.be/cosic/blog/dumping-and-extracting-the-spacex-starlink-user-terminal-firmware/
-          },
-   year = {2021},
-   month = {7},
+
+@Misc{WoutersDumpingUserTerminalFirmware,
+  author = {Lennert Wouters},
+  month  = {7},
+  note   = {[Online; accessed April 18, 2024]},
+  title  = {Dumping and extracting the SpaceX Starlink User Terminal firmware},
+  year   = {2021},
+  url    = {https://www.esat.kuleuven.be/cosic/blog/dumping-and-extracting-the-spacex-starlink-user-terminal-firmware/},
 }
+
 @article{Hauri2020,
    abstract = {Buoyed by advances in space technology, several firms are
                planning satellite constellations to offer broadband Internet
@@ -257,3 +268,32 @@
    year = {2020},
 }
 
+@Article{Hauri2020,
+  author    = {Yannick Hauri and Debopam Bhattacherjee and Manuel Grossmann and Ankit Singla},
+  journal   = {HotNets 2020 - Proceedings of the 19th ACM Workshop on Hot Topics in Networks},
+  title     = {"Internet from Space" without Inter-satellite Links},
+  year      = {2020},
+  month     = {11},
+  pages     = {205-211},
+  abstract  = {Buoyed by advances in space technology, several firms are
+               planning satellite constellations to offer broadband Internet
+               service. While these developments are happening quickly, there are
+               also many uncertainties about the design of these networks. A key
+               open question is whether or not they will incorporate direct
+               connectivity between satellites, instead of only ground-satellite
+               connections. We compare the network behavior resulting from the
+               two outcomes of that question. Our analysis shows that
+               inter-satellite links substantially reduce the temporal variations
+               in latency, add greater resilience to weather, and could yield
+               more than 3x the throughput achieved without such links. Thus,
+               whether this one design element pans out could have a large
+               bearing on the performance, reliability, and economics of these
+               networks.},
+  doi       = {10.1145/3422604.3425938},
+  isbn      = {9781450381451},
+  keywords  = {bent-pipe connectivity,ground-satellite connectivity, inter-satellite link,internet broadband constellation,leo,low earth orbit satellite},
+  publisher = {Association for Computing Machinery, Inc},
+  url       = {https://dl.acm.org/doi/10.1145/3422604.3425938},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
