--- a/proposal/references.bib
+++ b/proposal/references.bib
@@ -190,7 +190,7 @@
   bibsource  = {dblp computer science bibliography, https://dblp.org},
   biburl     = {https://dblp.org/rec/conf/infocom/MaCZCML23.bib},
   doi        = {10.1109/INFOCOM53939.2023.10228912},
-  keywords   = {Movement,Environment,LEO,Performance,LEO vs. Terrestrial,TCP vs. UDP,Power Consumption,Bent-Pipe},
+  keywords   = {Movement,Environment,LEO,Performance,LEO vs. Terrestrial,TCP vs. UDP,Power Consumption,Bent-Pipe,Magnetic Storms},
   timestamp  = {Mon, 18 Sep 2023 16:35:01 +0200},
   url        = {https://doi.org/10.1109/INFOCOM53939.2023.10228912},
 }
